--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,4 +25,6 @@
     <string name="light">Claro</string>
     <string name="system">Sistema</string>
     <string name="dark">Oscuro</string>
+    <string name="servers">Servers</string>
+    <string name="create_server">Create server</string>
 </resources>
