--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -27,4 +27,39 @@
     <string name="dark">Dark</string>
     <string name="servers">Servers</string>
     <string name="create_server">Create server</string>
+    <string name="no_saved_servers">No saved servers</string>
+    <string name="options">Options</string>
+    <string name="edit">Edit</string>
+    <string name="edit_this_server_instance">Edit this server instance</string>
+    <string name="delete">Delete</string>
+    <string name="delete_this_server_instance">Delete this server instance</string>
+    <string name="close">Close</string>
+    <string name="delete_server">Delete server</string>
+    <string name="are_you_sure_you_want_to_delete_this_server_connection_this_action_cannot_be_reverted">Are you sure you want to delete this server connection? This action cannot be reverted.</string>
+    <string name="cancel">Cancel</string>
+    <string name="error_when_deleting_server">Error when deleting server</string>
+    <string name="the_server_connection_could_not_be_deleted_due_to_an_error">The server connection could not be deleted due to an error.</string>
+    <string name="save">Save</string>
+    <string name="server_information">Server information</string>
+    <string name="server_name">Server Name</string>
+    <string name="connection_details">Connection details</string>
+    <string name="ip_address_or_domain">IP address or domain</string>
+    <string name="port">Port</string>
+    <string name="optional">Optional</string>
+    <string name="example_status">Example: /status</string>
+    <string name="path">Path</string>
+    <string name="basic_authentication">Basic authentication</string>
+    <string name="use_basic_authentication">Use basic authentication</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="error">Error</string>
+    <string name="couldn_t_create_server_connection">Couldn\'t create server connection</string>
+    <string name="an_error_occurred_while_trying_to_create_a_server_connection">An error occurred while trying to create a server connection.</string>
+    <string name="server_name_cannot_be_empty">Server name cannot be empty</string>
+    <string name="ip_address_or_domain_cannot_be_empty">IP address or domain cannot be empty</string>
+    <string name="invalid_ip_address_or_domain">Invalid IP address or domain</string>
+    <string name="invalid_port">Invalid port</string>
+    <string name="invalid_path">Invalid path</string>
+    <string name="username_cannot_be_empty">Username cannot be empty</string>
+    <string name="password_cannot_be_empty">Password cannot be empty</string>
 </resources>
