--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,6 +25,41 @@
     <string name="light">Claro</string>
     <string name="system">Sistema</string>
     <string name="dark">Oscuro</string>
-    <string name="servers">Servers</string>
-    <string name="create_server">Create server</string>
+    <string name="servers">Servidores</string>
+    <string name="create_server">Crear servidor</string>
+    <string name="no_saved_servers">No hay servidores guardados</string>
+    <string name="options">Opciones</string>
+    <string name="edit">Editar</string>
+    <string name="edit_this_server_instance">Editar esta instancia de servidor</string>
+    <string name="delete">Eliminar</string>
+    <string name="delete_this_server_instance">Eliminar esta instancia de servidor</string>
+    <string name="close">Cerrar</string>
+    <string name="delete_server">Eliminar servidor</string>
+    <string name="are_you_sure_you_want_to_delete_this_server_connection_this_action_cannot_be_reverted">¿Estás seguro de que deseas eliminar la conexión a este servidor? Esta acción no se puede deshacer.</string>
+    <string name="cancel">Cancelar</string>
+    <string name="error_when_deleting_server">Error al eliminar el servidor</string>
+    <string name="the_server_connection_could_not_be_deleted_due_to_an_error">La conexión al servidor no se ha podido eliminar debido a un error.</string>
+    <string name="save">Guardar</string>
+    <string name="server_information">Información del servidor</string>
+    <string name="server_name">Nombre del servidor</string>
+    <string name="connection_details">Detalles de conexión</string>
+    <string name="ip_address_or_domain">Dirección IP o dominio</string>
+    <string name="port">Puerto</string>
+    <string name="optional">Opcional</string>
+    <string name="example_status">Ejemplo: /status</string>
+    <string name="path">Ruta</string>
+    <string name="basic_authentication">Autenticación basic</string>
+    <string name="use_basic_authentication">Usar autenticación basic</string>
+    <string name="username">Nombre de usuario</string>
+    <string name="password">Contraseña</string>
+    <string name="error">Error</string>
+    <string name="couldn_t_create_server_connection">No se ha podido crear la conexión al servidor</string>
+    <string name="an_error_occurred_while_trying_to_create_a_server_connection">Ocurrió un error al intentar crear la conexión al servidor.</string>
+    <string name="server_name_cannot_be_empty">Nombre del servidor no puede estar vacío</string>
+    <string name="ip_address_or_domain_cannot_be_empty">Dirección IP o dominio no puede estar vacío</string>
+    <string name="invalid_ip_address_or_domain">Dirección IP o dominio no válidos</string>
+    <string name="invalid_port">Invalid port</string>
+    <string name="invalid_path">Invalid path</string>
+    <string name="username_cannot_be_empty">Nombre de usuario no puede estar vacío</string>
+    <string name="password_cannot_be_empty">Contraseña no puede estar vacía</string>
 </resources>
