--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,4 +62,7 @@
     <string name="invalid_path">Invalid path</string>
     <string name="username_cannot_be_empty">Nombre de usuario no puede estar vacío</string>
     <string name="password_cannot_be_empty">Contraseña no puede estar vacía</string>
+    <string name="set_as_default_server">Seleccionar como servidor por defecto</string>
+    <string name="connect_to_this_server_when_the_app_is_started">Conectar a este servidor cuando la app se inicia</string>
+    <string name="default_server">Servidor por defecto</string>
 </resources>
