--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,7 @@
     <string name="invalid_path">Invalid path</string>
     <string name="username_cannot_be_empty">Username cannot be empty</string>
     <string name="password_cannot_be_empty">Password cannot be empty</string>
+    <string name="set_as_default_server">Set as default server</string>
+    <string name="connect_to_this_server_when_the_app_is_started">Connect to this server when the app is started</string>
+    <string name="default_server">Default server</string>
 </resources>
