--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -65,4 +65,10 @@
     <string name="set_as_default_server">Seleccionar como servidor por defecto</string>
     <string name="connect_to_this_server_when_the_app_is_started">Conectar a este servidor cuando la app se inicia</string>
     <string name="default_server">Servidor por defecto</string>
+    <string name="connection_error">Error de conexión</string>
+    <string name="cannot_establish_a_connection_to_the_server_check_the_connection_values_and_try_again_if_your_server_is_behind_a_basic_authentication_make_sure_to_have_that_section_properly_configured">No se ha podido establecer una conexión con el servidor. Comprueba los valores de conexión y prueba de nuevo. Si tu servidor está detrás de una autenticación basic, asegúrate de que esa sección esté correctamente configurada.</string>
+    <string name="no_server_connections_created">No hay conexiones a servidores creadas</string>
+    <string name="create_a_connection_to_a_server_to_begin">Crea una conexión a un servidor para comenzar.</string>
+    <string name="an_error_occurred_when_loading_the_status">Ocurrió un error al cargar el estado</string>
+    <string name="loading_status">Cargando estado...</string>
 </resources>
