--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -73,4 +73,5 @@
     <string name="loading_status">Cargando estado...</string>
     <string name="information">Información</string>
     <string name="you_cannot_modify_the_connection_values_of_the_active_server_connection">No puedes modificar los valores de conexión de la conexión al servidor activa.</string>
+    <string name="selected_server">Servidor seleccionado</string>
 </resources>
