--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -74,4 +74,5 @@
     <string name="information">Information</string>
     <string name="you_cannot_modify_the_connection_values_of_the_active_server_connection">You cannot modify the connection values of the active server connection.</string>
     <string name="selected_server">Selected server</string>
+    <string name="edit_server">Edit server</string>
 </resources>
