Added contact developer button

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -75,4 +75,6 @@
     <string name="you_cannot_modify_the_connection_values_of_the_active_server_connection">No puedes modificar los valores de conexión de la conexión al servidor activa.</string>
     <string name="selected_server">Servidor seleccionado</string>
     <string name="edit_server">Editar servidor</string>
+    <string name="contact_the_developer">Contactar con el desarrollador</string>
+    <string name="contact_form">Formulario de contacto</string>
 </resources>
