--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -77,4 +77,13 @@
     <string name="edit_server">Edit server</string>
     <string name="contact_the_developer">Contact the developer</string>
     <string name="contact_form">Contact form</string>
+    <string name="give_a_tip_tp_the_developer">Give a tip tp the developer</string>
+    <string name="contribute_with_the_development_of_the_app">Contribute with the development of the app</string>
+    <string name="tips">Tips</string>
+    <string name="no_tip_options_available_right_now">No tip options available right now.</string>
+    <string name="purchase_failed">Purchase failed</string>
+    <string name="an_error_occurred_while_the_purchase_was_being_processed_or_it_has_been_cancelled_by_the_user">An error occurred while the purchase was being processed, or it has been cancelled by the user.</string>
+    <string name="success">Success</string>
+    <string name="purchase_completed_successfully">Purchase completed successfully</string>
+    <string name="the_purchase_was_completed_successfully_thank_you_for_your_support">The purchase was completed successfully. Thank you for your support!</string>
 </resources>
